[package]
name = "stm32l433-hal"
version = "0.1.0"
authors = ["Tyler Wilcock <tyler.l.wilcock@gmail.com>"]
description = "Hardware abstraction layer for the stm32l433 chips"
keywords = [
    "no-std", "arm", "cortex-m", "stm32", "embedded", "hal", "embedded-hal", "stm32l433", "stm32l433cb",
    "stm32l433cc", "stm32l433rb", "stm32l433rc", "stm32l433vc",
]
repository = "https://github.com/twilco/stm32l433-hal"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.5.2"
nb = "0.1.1"
cortex-m-rt = "0.5.1"

[dependencies.cast]
version  = "0.2.2"
default-features = false

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.embedded-hal]
version = "0.2.1"
features = ["unproven"]

[dependencies.stm32l4]
version = "0.2.1"
features = ["stm32l4x3", "rt"]

[dev-dependencies]
panic-semihosting = "0.3.0"
cortex-m-semihosting = "0.3.0"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
